fix(site): make navbar visible on mobile (#3216)
Installation guides:

bootstrap: https://getbootstrap.com/docs/5.2/getting-started/introduction/

component: https://getbootstrap.com/docs/5.2/components/navbar/

Updating bootstrap and adding the js dependency has greatly increased the site size. Cold visit went from ~20kb to ~70kb. Something to bear in mind with these additions.

--- a/css/main.scss
+++ b/css/main.scss
@@ -77,6 +77,12 @@ pre code {
     text-transform: lowercase;
 }
 
+@media (min-width: 992px) {
+    #hyper .nav-link {
+        line-height: 3rem;
+    }
+}
+
 #hyper .navbar a:hover, #hyper .navbar a:focus {
     background: none;
     border-color: $primary-highlight-color;
